// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News should render item when ID specified 1`] = `
<div>
  <div
    className="news"
  >
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/news/id"
      />
      <Route
        component={[Function]}
        exact={true}
        path="/news/id/:newsId"
      />
      <RouteNotFound />
    </Switch>
  </div>
</div>
`;

exports[`News should render list when no ID specified 1`] = `
<div>
  <div
    className="news"
  >
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/news"
      />
      <Route
        component={[Function]}
        exact={true}
        path="/news/:newsId"
      />
      <RouteNotFound />
    </Switch>
  </div>
</div>
`;
